added decor icons

--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
 			</div>
 		</div>
 	</div>
+	<div class="decor-panel">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2">
+					<p class="decor pr-1"><span>Украинское домашнее мясо.</span></p>
+				</div>
+				<div class="col-md-2">
+					<p class="decor pr-2"><span>Специи из Армении.</span></p>
+				</div>
+				<div class="col-md-2">
+					<p class="decor pr-3"><span>Готовим только на мангале.</span></p>
+				</div>
+				<div class="col-md-2">
+					<p class="decor pr-4"><span>35 видов шашлыка.</span></p>
+				</div>
+				<div class="col-md-2">
+					<p class="decor pr-5"><span>Точная доставка!</span></p>
+				</div>
+				<div class="col-md-2">
+					<p class="decor pr-6"><span>3 магазина в Киеве.</span></p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<section id="categories">
 		<div class="container">
 			<div class="row">
