--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 		<title> Кочерга - магазин готового шашлыка</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="dist/styles/bundle.min.css">
-		<!-- <link rel="stylesheet" href="dist/styles/menu.css"> -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/css/unslider.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/css/unslider-dots.css">
 	</head>
 	<body>
 		<header class="is-fixed">
 			<a id="cd-logo" href="#0"><img src="dist/images/logo.png" height="60" alt="Кочерга"></a>
 			<nav id="cd-top-nav">
-			<ul>
-				<li><a href="#0">Главная</a></li>
-				<li><a href="#0">Мой профиль</a></li>
-			</ul>
+				<ul>
+					<li><a href="#0">Главная</a></li>
+					<li><a href="#0">Мой профиль</a></li>
+				</ul>
+
 			</nav>
+			<a id="cart" href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a>
 			<a id="cd-menu-trigger" href="#0"><span class="cd-menu-text">Меню</span><span class="cd-menu-icon"></span></a>
 	</header>
 	<nav id="cd-lateral-nav">
@@ -89,22 +92,22 @@
 	<div class="decor-panel">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-1"><span>Украинское домашнее мясо.</span></p>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-2"><span>Специи из Армении.</span></p>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-3"><span>Готовим только на мангале.</span></p>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-4"><span>35 видов шашлыка.</span></p>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-5"><span>Точная доставка!</span></p>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<p class="decor pr-6"><span>3 магазина в Киеве.</span></p>
 				</div>
 			</div>
@@ -240,7 +243,24 @@
 			</article>
 		</div>
 	</section>
-	
+	<div id="slider">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="slides">
+						<div class="slider-wrap">
+							<ul>
+								<li><img src="src/images/bg.jpg" alt=""></li>
+								<li><img src="src/images/bg2.jpg" alt=""></li>
+								<li><img src="src/images/bg3.jpg" alt=""></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="map"></div>
 	</main>
 	<footer id="footer" class="cd-main-content">
 		<section id="widgets">
@@ -286,8 +306,10 @@
 		</div>
 	</section>
 	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js" type="text/javascript"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="dist/scripts/main.min.js"></script>
 </body>
 </html>
