--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
+					<hr>
 					<div class="slides">
 						<div class="slider-wrap">
 							<ul>
@@ -259,8 +260,14 @@
 				</div>
 			</div>
 		</div>
+	</div>	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div id="map"></div>
+			</div>
+		</div>
 	</div>
-	<div id="map"></div>
 	</main>
 	<footer id="footer" class="cd-main-content">
 		<section id="widgets">
@@ -308,6 +315,7 @@
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js" type="text/javascript"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="dist/scripts/main.min.js"></script>
