--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-3 col-md-push-6">
 					<div class="address address-right">
 						<p>Доставка:</p>
-						<p class="city">Симферополь</p>
+						<p class="city">Севастополь</p>
 						<p class="tel"><small>8 (978)</small> 755-755-5</p>
 						<p class="street">ул. Руднева, 39 В</p>
 					</div>
